Updated through the cactus bowl.  Included NC scenarios.

--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,78 +342,78 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-01-02 22:15:45</em></div>
-<div class="line"><em>Last bowl scored:  ALAMO BOWL (Oregon vs. TCU)</em></div>
+<div class="line"><em>Last updated:  2016-01-03 13:18:30</em></div>
+<div class="line"><em>Last bowl scored:  CACTUS BOWL (West Virginia vs. Arizona State)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Eclipse 36.5</strong></div>
-<div class="line">2. Jake &amp; the Neverland Pirates 35.75</div>
-<div class="line">3. <strong>Rocket Surgeon 35.25</strong></div>
-<div class="line">4. Beaver Believer 35.0</div>
-<div class="line">4. Spiker 35.0</div>
+<div class="line">2. <strong>Rocket Surgeon 36.25</strong></div>
+<div class="line">3. Spiker 36.0</div>
+<div class="line">4. Jake &amp; the Neverland Pirates 35.75</div>
+<div class="line">5. Beaver Believer 35.0</div>
 <div class="line">6. Team Aaron 34.75</div>
+<div class="line">7. FIELDS OF WHEAT 34.5</div>
 <div class="line">7. POPO 34.5</div>
-<div class="line">8. Corgidawg 33.75</div>
-<div class="line">8. Santa Cruz Bill 33.75</div>
-<div class="line">10. FIELDS OF WHEAT 33.5</div>
-<div class="line">11. GUAC BOYZ 33.25</div>
-<div class="line">12. Cowboy 33.0</div>
-<div class="line">13. Texsons 32.75</div>
-<div class="line">14. <strong>JessePinkman 32.25</strong></div>
-<div class="line">15. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 32.0</div>
-<div class="line">15. West Coast Bias 32.0</div>
-<div class="line">17. Devil's Tower 31.75</div>
-<div class="line">17. Yellowstone  31.75</div>
-<div class="line">17. Yoda 31.75</div>
-<div class="line">20. HAM BEAST 31.5</div>
-<div class="line">20. Lucky in 2016 31.5</div>
-<div class="line">20. Texas Women 31.5</div>
+<div class="line">9. GUAC BOYZ 34.25</div>
+<div class="line">10. Corgidawg 33.75</div>
+<div class="line">10. Santa Cruz Bill 33.75</div>
+<div class="line">10. Texsons 33.75</div>
+<div class="line">13. <strong>JessePinkman 33.25</strong></div>
+<div class="line">14. Cowboy 33.0</div>
+<div class="line">15. Texas Women 32.5</div>
+<div class="line">16. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 32.0</div>
+<div class="line">16. West Coast Bias 32.0</div>
+<div class="line">18. Devil's Tower 31.75</div>
+<div class="line">18. Yellowstone  31.75</div>
+<div class="line">18. Yoda 31.75</div>
+<div class="line">21. HAM BEAST 31.5</div>
+<div class="line">21. Lucky in 2016 31.5</div>
 <div class="line">23. BUBBA 31.0</div>
-<div class="line">24. Slave Darby 30.75</div>
-<div class="line">25. BROCOHLI !!!!! 30.5</div>
-<div class="line">25. <strong>D-bo 30.5</strong></div>
-<div class="line">25. GODIVA 30.5</div>
-<div class="line">25. Hunter 55 30.5</div>
-<div class="line">29. Julia 30.0</div>
-<div class="line">30. Go Frogs 29.25</div>
-<div class="line">30. Sure Thing 29.25</div>
-<div class="line">32. Beach Bum 29.0</div>
-<div class="line">32. Blind Prognosticators 29.0</div>
-<div class="line">32. Frog Man 4Ever 29.0</div>
-<div class="line">32. Magnitogorsk 29.0</div>
-<div class="line">36. <strong>Captain 28.25</strong></div>
-<div class="line">36. Shi boa 28.25</div>
-<div class="line">36. The Force Awakens 28.25</div>
-<div class="line">39. Spartans 28.0</div>
-<div class="line">40. COUGAR 27.75</div>
-<div class="line">40. HALF DOME 27.75</div>
-<div class="line">40. Hui Mama 27.75</div>
-<div class="line">40. Tan Mei yi&nbsp; 27.75</div>
-<div class="line">44. <strong>Mama Bear 27.5</strong></div>
-<div class="line">44. Trollotopia 27.5</div>
-<div class="line">46. Trojans 27.25</div>
-<div class="line">47. FF  27.0</div>
-<div class="line">47. KROB15 27.0</div>
-<div class="line">49. Clairvoyantsmith 26.75</div>
-<div class="line">49. EL CAPITAN 26.75</div>
-<div class="line">49. Going Bowling 26.75</div>
-<div class="line">49. Perfect Spiral 26.75</div>
-<div class="line">49. <strong>Surf 26.75</strong></div>
-<div class="line">54. Oregon Okie 26.5</div>
-<div class="line">54. Texas State 26.5</div>
-<div class="line">56. Hou Dat 26.25</div>
-<div class="line">56. LumberSexual 26.25</div>
-<div class="line">58. Aggies 26.0</div>
-<div class="line">58. Blondy 26.0</div>
-<div class="line">60. Gussysue 25.75</div>
-<div class="line">61. TTRedRaider09 25.0</div>
-<div class="line">62. Opposite of Dad 24.75</div>
-<div class="line">63. Bernie Trump 24.5</div>
-<div class="line">63. Billy Bad 24.5</div>
+<div class="line">23. Julia 31.0</div>
+<div class="line">25. Slave Darby 30.75</div>
+<div class="line">26. BROCOHLI !!!!! 30.5</div>
+<div class="line">26. <strong>D-bo 30.5</strong></div>
+<div class="line">26. GODIVA 30.5</div>
+<div class="line">26. Hunter 55 30.5</div>
+<div class="line">30. Go Frogs 30.25</div>
+<div class="line">31. Beach Bum 30.0</div>
+<div class="line">32. Sure Thing 29.25</div>
+<div class="line">33. Blind Prognosticators 29.0</div>
+<div class="line">33. Frog Man 4Ever 29.0</div>
+<div class="line">33. Magnitogorsk 29.0</div>
+<div class="line">36. <strong>Mama Bear 28.5</strong></div>
+<div class="line">37. <strong>Captain 28.25</strong></div>
+<div class="line">37. Shi boa 28.25</div>
+<div class="line">37. The Force Awakens 28.25</div>
+<div class="line">37. Trojans 28.25</div>
+<div class="line">41. KROB15 28.0</div>
+<div class="line">41. Spartans 28.0</div>
+<div class="line">43. Clairvoyantsmith 27.75</div>
+<div class="line">43. COUGAR 27.75</div>
+<div class="line">43. Going Bowling 27.75</div>
+<div class="line">43. HALF DOME 27.75</div>
+<div class="line">43. Hui Mama 27.75</div>
+<div class="line">43. Tan Mei yi&nbsp; 27.75</div>
+<div class="line">49. Texas State 27.5</div>
+<div class="line">49. Trollotopia 27.5</div>
+<div class="line">51. Hou Dat 27.25</div>
+<div class="line">52. Blondy 27.0</div>
+<div class="line">52. FF  27.0</div>
+<div class="line">54. EL CAPITAN 26.75</div>
+<div class="line">54. Perfect Spiral 26.75</div>
+<div class="line">54. <strong>Surf 26.75</strong></div>
+<div class="line">57. Oregon Okie 26.5</div>
+<div class="line">58. LumberSexual 26.25</div>
+<div class="line">59. Aggies 26.0</div>
+<div class="line">59. TTRedRaider09 26.0</div>
+<div class="line">61. Gussysue 25.75</div>
+<div class="line">62. Billy Bad 25.5</div>
+<div class="line">63. Opposite of Dad 24.75</div>
+<div class="line">64. Bernie Trump 24.5</div>
 <div class="line">65. Billy Bad 2nd 24.0</div>
-<div class="line">66. Cotton Headed Ninny Muggins 22.0</div>
-<div class="line">67. GMen 21.75</div>
-<div class="line">68. Deakins 21.0</div>
+<div class="line">66. Cotton Headed Ninny Muggins 23.0</div>
+<div class="line">67. Deakins 22.0</div>
+<div class="line">68. GMen 21.75</div>
 <div class="line">69. <strong>Groodle 20.5</strong></div>
 <div class="line">70. Pooh 19.0</div>
 </div>
