--- a/bowl_pool/test/2015-2016/picks.html
+++ b/bowl_pool/test/2015-2016/picks.html
@@ -2690,7 +2690,7 @@ ul.auto-toc {
 <td>Stanford</td>
 <td>Stanford</td>
 <td>Stanford</td>
-<td>Stanford<sup>*</sup></td>
+<td>Stanford</td>
 <td>Stanford<sup>*</sup></td>
 <td>Stanford</td>
 <td>Stanford</td>
