Updated test site with bowl results

--- a/bowl_pool/test/2016-2017/rankings.html
+++ b/bowl_pool/test/2016-2017/rankings.html
@@ -342,81 +342,68 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-12-20 20:18:53</em></div>
-<div class="line"><em>Last bowl scored:  MIAMI BEACH BOWL (Tulsa vs. Central Michigan)</em></div>
+<div class="line"><em>Last updated:  2016-12-29 14:45:10</em></div>
+<div class="line"><em>Last bowl scored:  TEXAS BOWL (Texas A&amp;M vs. Kansas State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Aggies 1.0</div>
-<div class="line">1. Beach Bum 1.0</div>
-<div class="line">1. Beaver Believer 1.0</div>
-<div class="line">1. Bernie Trump 1.0</div>
-<div class="line">1. Billy Bad 1.0</div>
-<div class="line">1. Billy Bad 2nd 1.0</div>
-<div class="line">1. Blind Prognosticators 1.0</div>
-<div class="line">1. Blondy 1.0</div>
-<div class="line">1. BUBBA 1.0</div>
-<div class="line">1. <strong>Bumblerooski 1.0</strong></div>
-<div class="line">1. <strong>Captain 1.0</strong></div>
-<div class="line">1. Corgidawg 1.0</div>
-<div class="line">1. Cotton Headed Ninny Muggins 1.0</div>
-<div class="line">1. COUGAR 1.0</div>
-<div class="line">1. Cowboy 1.0</div>
-<div class="line">1. <strong>D-bo 1.0</strong></div>
-<div class="line">1. Deakins 1.0</div>
-<div class="line">1. <strong>Eclipse 1.0</strong></div>
-<div class="line">1. Frog Man 4Ever 1.0</div>
-<div class="line">1. Go Frogs 1.0</div>
-<div class="line">1. GODIVA 1.0</div>
-<div class="line">1. Going Bowling 1.0</div>
-<div class="line">1. <strong>Groodle 1.0</strong></div>
-<div class="line">1. Gussysue 1.0</div>
-<div class="line">1. HAM BEAST 1.0</div>
-<div class="line">1. Hou Dat 1.0</div>
-<div class="line">1. Hui Mama 1.0</div>
-<div class="line">1. Hunter 55 1.0</div>
-<div class="line">1. Jake &amp; the Neverland Pirates 1.0</div>
-<div class="line">1. <strong>JessePinkman 1.0</strong></div>
-<div class="line">1. Julia 1.0</div>
-<div class="line">1. KROB15 1.0</div>
-<div class="line">1. Lucky in 2016 1.0</div>
-<div class="line">1. LumberSexual 1.0</div>
-<div class="line">1. <strong>Mama Bear 1.0</strong></div>
-<div class="line">1. Oregon Okie 1.0</div>
-<div class="line">1. Perfect Spiral 1.0</div>
-<div class="line">1. POPO 1.0</div>
-<div class="line">1. Rocket Surgeon 1.0</div>
-<div class="line">1. Santa Cruz Bill 1.0</div>
-<div class="line">1. Shi boa 1.0</div>
-<div class="line">1. Slave Darby 1.0</div>
-<div class="line">1. Spartans 1.0</div>
-<div class="line">1. Spiker 1.0</div>
-<div class="line">1. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 1.0</div>
-<div class="line">1. Sure Thing 1.0</div>
-<div class="line">1. <strong>Surf 1.0</strong></div>
-<div class="line">1. Tan Mei yi&nbsp; 1.0</div>
-<div class="line">1. Team Aaron 1.0</div>
-<div class="line">1. Texas Women 1.0</div>
-<div class="line">1. The Force Awakens 1.0</div>
-<div class="line">1. Trojans 1.0</div>
-<div class="line">1. Trollotopia 1.0</div>
-<div class="line">1. TTRedRaider09 1.0</div>
-<div class="line">1. West Coast Bias 1.0</div>
-<div class="line">1. Yoda 1.0</div>
-<div class="line">57. BROCOHLI !!!!! 0.0</div>
-<div class="line">57. Clairvoyantsmith 0.0</div>
-<div class="line">57. Devil's Tower 0.0</div>
-<div class="line">57. EL CAPITAN 0.0</div>
-<div class="line">57. FF  0.0</div>
-<div class="line">57. FIELDS OF WHEAT 0.0</div>
-<div class="line">57. GMen 0.0</div>
-<div class="line">57. GUAC BOYZ 0.0</div>
-<div class="line">57. HALF DOME 0.0</div>
-<div class="line">57. Magnitogorsk 0.0</div>
-<div class="line">57. Opposite of Dad 0.0</div>
-<div class="line">57. Pooh 0.0</div>
-<div class="line">57. Texas State 0.0</div>
-<div class="line">57. Texsons 0.0</div>
-<div class="line">57. Yellowstone  0.0</div>
+<div class="line">1. <strong>The force is strong with this one 16.75</strong></div>
+<div class="line">2. <strong>D-bo 16.25</strong></div>
+<div class="line">3. Blindhog 2017 15.75</div>
+<div class="line">4. Jake and the Neverland Pirates 15.5</div>
+<div class="line">5. <strong>Do. Or do not. 14.75</strong></div>
+<div class="line">6. <strong>Bumblerooski 14.5</strong></div>
+<div class="line">7. O'Pooh 14.25</div>
+<div class="line">8. Backroom Deals 13.75</div>
+<div class="line">8. <strong>Eclipse 13.75</strong></div>
+<div class="line">8. Zena 13.75</div>
+<div class="line">11. Aaron's Team 13.25</div>
+<div class="line">11. <strong>EM43 13.25</strong></div>
+<div class="line">11. <strong>GlamKam 13.25</strong></div>
+<div class="line">14. <strong>#MamaBear 13.0</strong></div>
+<div class="line">15. Cjepson 12.75</div>
+<div class="line">15. Fake News 12.75</div>
+<div class="line">15. Krazy Koochies 12.75</div>
+<div class="line">18. Doc 12.5</div>
+<div class="line">19. GoForBones 12.25</div>
+<div class="line">19. LUCKY IN 2017 12.25</div>
+<div class="line">19. The Dude 12.25</div>
+<div class="line">19. <strong>You are my only hope 12.25</strong></div>
+<div class="line">23. Blind Dog's Bluff 12.0</div>
+<div class="line">23. OSUX3 Fan 12.0</div>
+<div class="line">23. Team Ellie Mae 12.0</div>
+<div class="line">26. Dirk Diggler 11.75</div>
+<div class="line">27. Gkid7 11.5</div>
+<div class="line">27. Texas Giants 11.5</div>
+<div class="line">29. ConflictofInterest 11.25</div>
+<div class="line">29. <strong>Red Five 11.25</strong></div>
+<div class="line">29. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 11.25</div>
+<div class="line">32. 12th Man 11.0</div>
+<div class="line">32. ADTESQ 11.0</div>
+<div class="line">32. Corgidawg 11.0</div>
+<div class="line">32. EVA 11.0</div>
+<div class="line">32. Gussysue 11.0</div>
+<div class="line">32. Maine Chic 11.0</div>
+<div class="line">32. Thetis 11.0</div>
+<div class="line">32. Tyrone Swoopes 11.0</div>
+<div class="line">40. After Further Review 10.5</div>
+<div class="line">41. Putin's Dog 10.25</div>
+<div class="line">42. Amy Senders 10.0</div>
+<div class="line">42. Biscuit's Ball 10.0</div>
+<div class="line">42. Godiva 10.0</div>
+<div class="line">42. Katyusa 10.0</div>
+<div class="line">42. Troll Factory Inc 10.0</div>
+<div class="line">47. SantaCruzBill 9.25</div>
+<div class="line">48. #NeverBama1 8.75</div>
+<div class="line">49. West Coast Bias 8.5</div>
+<div class="line">50. T-Bone 8.25</div>
+<div class="line">51. Invanka Trump 8.0</div>
+<div class="line">52. CUTIE PIE 7.25</div>
+<div class="line">53. Best Logo Wins 6.25</div>
+<div class="line">54. Spiker 6.0</div>
+<div class="line">54. Trollmaster 6.0</div>
+<div class="line">56. LaDolceVida 4.25</div>
+<div class="line">57. Spem in perpetuum 4.0</div>
+<div class="line">58. Cowboy 3.0</div>
 </div>
 </div>
 </body>
