Updated bowl results.

--- a/bowl_pool/2016-2017/rankings.html
+++ b/bowl_pool/2016-2017/rankings.html
@@ -342,68 +342,68 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-12-29 14:46:14</em></div>
-<div class="line"><em>Last bowl scored:  TEXAS BOWL (Texas A&amp;M vs. Kansas State)</em></div>
+<div class="line"><em>Last updated:  2016-12-30 07:57:32</em></div>
+<div class="line"><em>Last bowl scored:  ALAMO BOWL  (Colorado vs. Oklahoma State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>The force is strong with this one 16.75</strong></div>
-<div class="line">2. <strong>D-bo 16.25</strong></div>
-<div class="line">3. Blindhog 2017 15.75</div>
-<div class="line">4. Jake and the Neverland Pirates 15.5</div>
-<div class="line">5. <strong>Do. Or do not. 14.75</strong></div>
-<div class="line">6. <strong>Bumblerooski 14.5</strong></div>
-<div class="line">7. O'Pooh 14.25</div>
-<div class="line">8. Backroom Deals 13.75</div>
-<div class="line">8. <strong>Eclipse 13.75</strong></div>
-<div class="line">8. Zena 13.75</div>
-<div class="line">11. Aaron's Team 13.25</div>
-<div class="line">11. <strong>EM43 13.25</strong></div>
-<div class="line">11. <strong>GlamKam 13.25</strong></div>
-<div class="line">14. <strong>#MamaBear 13.0</strong></div>
-<div class="line">15. Cjepson 12.75</div>
-<div class="line">15. Fake News 12.75</div>
-<div class="line">15. Krazy Koochies 12.75</div>
-<div class="line">18. Doc 12.5</div>
-<div class="line">19. GoForBones 12.25</div>
-<div class="line">19. LUCKY IN 2017 12.25</div>
-<div class="line">19. The Dude 12.25</div>
-<div class="line">19. <strong>You are my only hope 12.25</strong></div>
-<div class="line">23. Blind Dog's Bluff 12.0</div>
-<div class="line">23. OSUX3 Fan 12.0</div>
-<div class="line">23. Team Ellie Mae 12.0</div>
-<div class="line">26. Dirk Diggler 11.75</div>
-<div class="line">27. Gkid7 11.5</div>
-<div class="line">27. Texas Giants 11.5</div>
-<div class="line">29. ConflictofInterest 11.25</div>
-<div class="line">29. <strong>Red Five 11.25</strong></div>
-<div class="line">29. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 11.25</div>
-<div class="line">32. 12th Man 11.0</div>
-<div class="line">32. ADTESQ 11.0</div>
-<div class="line">32. Corgidawg 11.0</div>
-<div class="line">32. EVA 11.0</div>
-<div class="line">32. Gussysue 11.0</div>
-<div class="line">32. Maine Chic 11.0</div>
-<div class="line">32. Thetis 11.0</div>
-<div class="line">32. Tyrone Swoopes 11.0</div>
-<div class="line">40. After Further Review 10.5</div>
-<div class="line">41. Putin's Dog 10.25</div>
-<div class="line">42. Amy Senders 10.0</div>
-<div class="line">42. Biscuit's Ball 10.0</div>
-<div class="line">42. Godiva 10.0</div>
-<div class="line">42. Katyusa 10.0</div>
-<div class="line">42. Troll Factory Inc 10.0</div>
-<div class="line">47. SantaCruzBill 9.25</div>
-<div class="line">48. #NeverBama1 8.75</div>
-<div class="line">49. West Coast Bias 8.5</div>
-<div class="line">50. T-Bone 8.25</div>
-<div class="line">51. Invanka Trump 8.0</div>
-<div class="line">52. CUTIE PIE 7.25</div>
-<div class="line">53. Best Logo Wins 6.25</div>
-<div class="line">54. Spiker 6.0</div>
-<div class="line">54. Trollmaster 6.0</div>
-<div class="line">56. LaDolceVida 4.25</div>
-<div class="line">57. Spem in perpetuum 4.0</div>
-<div class="line">58. Cowboy 3.0</div>
+<div class="line">1. <strong>The force is strong with this one 19.0</strong></div>
+<div class="line">2. <strong>D-bo 18.25</strong></div>
+<div class="line">3. Blindhog 2017 18.0</div>
+<div class="line">3. <strong>Do. Or do not. 18.0</strong></div>
+<div class="line">5. Jake and the Neverland Pirates 17.5</div>
+<div class="line">6. <strong>Eclipse 17.0</strong></div>
+<div class="line">6. Zena 17.0</div>
+<div class="line">8. <strong>Bumblerooski 16.5</strong></div>
+<div class="line">8. <strong>EM43 16.5</strong></div>
+<div class="line">10. <strong>#MamaBear 16.25</strong></div>
+<div class="line">11. Backroom Deals 16.0</div>
+<div class="line">11. Cjepson 16.0</div>
+<div class="line">13. Aaron's Team 15.5</div>
+<div class="line">13. ConflictofInterest 15.5</div>
+<div class="line">13. O'Pooh 15.5</div>
+<div class="line">13. <strong>You are my only hope 15.5</strong></div>
+<div class="line">17. <strong>GlamKam 15.25</strong></div>
+<div class="line">17. OSUX3 Fan 15.25</div>
+<div class="line">19. Fake News 15.0</div>
+<div class="line">20. Gkid7 14.75</div>
+<div class="line">20. Krazy Koochies 14.75</div>
+<div class="line">22. GoForBones 14.25</div>
+<div class="line">22. Gussysue 14.25</div>
+<div class="line">22. LUCKY IN 2017 14.25</div>
+<div class="line">25. Blind Dog's Bluff 14.0</div>
+<div class="line">25. Team Ellie Mae 14.0</div>
+<div class="line">27. Doc 13.5</div>
+<div class="line">28. Biscuit's Ball 13.25</div>
+<div class="line">28. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 13.25</div>
+<div class="line">28. The Dude 13.25</div>
+<div class="line">31. 12th Man 13.0</div>
+<div class="line">31. ADTESQ 13.0</div>
+<div class="line">31. Corgidawg 13.0</div>
+<div class="line">31. Dirk Diggler 13.0</div>
+<div class="line">31. EVA 13.0</div>
+<div class="line">31. Maine Chic 13.0</div>
+<div class="line">31. Thetis 13.0</div>
+<div class="line">38. After Further Review 12.5</div>
+<div class="line">38. Texas Giants 12.5</div>
+<div class="line">40. Putin's Dog 12.25</div>
+<div class="line">40. <strong>Red Five 12.25</strong></div>
+<div class="line">42. #NeverBama1 12.0</div>
+<div class="line">42. Amy Senders 12.0</div>
+<div class="line">42. Godiva 12.0</div>
+<div class="line">42. Katyusa 12.0</div>
+<div class="line">46. SantaCruzBill 11.25</div>
+<div class="line">47. Troll Factory Inc 11.0</div>
+<div class="line">47. Tyrone Swoopes 11.0</div>
+<div class="line">49. CUTIE PIE 10.5</div>
+<div class="line">49. T-Bone 10.5</div>
+<div class="line">49. West Coast Bias 10.5</div>
+<div class="line">52. Invanka Trump 9.0</div>
+<div class="line">53. Best Logo Wins 8.5</div>
+<div class="line">54. Spiker 8.25</div>
+<div class="line">55. Trollmaster 8.0</div>
+<div class="line">56. LaDolceVida 5.25</div>
+<div class="line">57. Spem in perpetuum 5.0</div>
+<div class="line">58. Cowboy 4.0</div>
 </div>
 </div>
 </body>
