--- a/bowl_pool/2016-2017/results.html
+++ b/bowl_pool/2016-2017/results.html
@@ -1690,69 +1690,261 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 </tr>
+<tr><td>20</td>
+<td>BIRMINGHAM BOWL</td>
+<td>South Florida</td>
+<td>South Carolina</td>
+<td>10.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>21</td>
+<td>BELK BOWL</td>
+<td>Virginia Tech</td>
+<td>Arkansas</td>
+<td>7.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>22</td>
+<td>ALAMO BOWL</td>
+<td>Colorado</td>
+<td>Oklahoma State</td>
+<td>3.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>2.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>13.0</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>6.25</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>3.0</strong></td>
-<td><strong>7.25</strong></td>
 <td><strong>16.25</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>13.0</strong></td>
 <td><strong>12.5</strong></td>
-<td><strong>13.75</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>8.5</strong></td>
 <td><strong>13.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>10.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>4.0</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>5.25</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>15.25</strong></td>
 <td><strong>12.25</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>5.0</strong></td>
+<td><strong>8.25</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>13.0</strong></td>
 <td><strong>11.0</strong></td>
 <td><strong>8.0</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>10.5</strong></td>
 <td><strong>15.5</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>4.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>4.0</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>13.75</strong></td>
+<td><strong>17.0</strong></td>
 </tr>
 </tbody>
 </table>
