Updated bowl results.

--- a/bowl_pool/2016-2017/results.html
+++ b/bowl_pool/2016-2017/results.html
@@ -1882,69 +1882,389 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 </tr>
+<tr><td>23</td>
+<td>LIBERTY BOWL</td>
+<td>Georgia</td>
+<td>TCU</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>24</td>
+<td>SUN BOWL</td>
+<td>Stanford</td>
+<td>North Carolina</td>
+<td>3.5</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>25</td>
+<td>MUSIC CITY BOWL</td>
+<td>Tennessee</td>
+<td>Nebraska</td>
+<td>3.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>26</td>
+<td>ARIZONA BOWL</td>
+<td>Air Force</td>
+<td>South Alabama</td>
+<td>13.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+</tr>
+<tr><td>27</td>
+<td>ORANGE BOWL</td>
+<td>Michigan</td>
+<td>Florida State</td>
+<td>6.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>16.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>12.0</strong></td>
+<td><strong>19.25</strong></td>
 <td><strong>16.0</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>4.0</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>13.0</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>9.0</strong></td>
 <td><strong>17.5</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>5.25</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>5.0</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>10.5</strong></td>
+<td><strong>16.0</strong></td>
 <td><strong>15.5</strong></td>
 <td><strong>17.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>6.0</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>7.25</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>23.0</strong></td>
 </tr>
 </tbody>
 </table>
