--- a/bowl_pool/2016-2017/rankings.html
+++ b/bowl_pool/2016-2017/rankings.html
@@ -342,68 +342,68 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-12-30 07:57:32</em></div>
-<div class="line"><em>Last bowl scored:  ALAMO BOWL  (Colorado vs. Oklahoma State)</em></div>
+<div class="line"><em>Last updated:  2016-12-31 09:29:21</em></div>
+<div class="line"><em>Last bowl scored:  ORANGE BOWL   (Michigan vs. Florida State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>The force is strong with this one 19.0</strong></div>
-<div class="line">2. <strong>D-bo 18.25</strong></div>
-<div class="line">3. Blindhog 2017 18.0</div>
-<div class="line">3. <strong>Do. Or do not. 18.0</strong></div>
-<div class="line">5. Jake and the Neverland Pirates 17.5</div>
-<div class="line">6. <strong>Eclipse 17.0</strong></div>
-<div class="line">6. Zena 17.0</div>
-<div class="line">8. <strong>Bumblerooski 16.5</strong></div>
-<div class="line">8. <strong>EM43 16.5</strong></div>
-<div class="line">10. <strong>#MamaBear 16.25</strong></div>
-<div class="line">11. Backroom Deals 16.0</div>
-<div class="line">11. Cjepson 16.0</div>
-<div class="line">13. Aaron's Team 15.5</div>
-<div class="line">13. ConflictofInterest 15.5</div>
-<div class="line">13. O'Pooh 15.5</div>
-<div class="line">13. <strong>You are my only hope 15.5</strong></div>
-<div class="line">17. <strong>GlamKam 15.25</strong></div>
-<div class="line">17. OSUX3 Fan 15.25</div>
-<div class="line">19. Fake News 15.0</div>
-<div class="line">20. Gkid7 14.75</div>
-<div class="line">20. Krazy Koochies 14.75</div>
-<div class="line">22. GoForBones 14.25</div>
-<div class="line">22. Gussysue 14.25</div>
-<div class="line">22. LUCKY IN 2017 14.25</div>
-<div class="line">25. Blind Dog's Bluff 14.0</div>
-<div class="line">25. Team Ellie Mae 14.0</div>
-<div class="line">27. Doc 13.5</div>
-<div class="line">28. Biscuit's Ball 13.25</div>
-<div class="line">28. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 13.25</div>
-<div class="line">28. The Dude 13.25</div>
-<div class="line">31. 12th Man 13.0</div>
-<div class="line">31. ADTESQ 13.0</div>
-<div class="line">31. Corgidawg 13.0</div>
-<div class="line">31. Dirk Diggler 13.0</div>
-<div class="line">31. EVA 13.0</div>
-<div class="line">31. Maine Chic 13.0</div>
-<div class="line">31. Thetis 13.0</div>
-<div class="line">38. After Further Review 12.5</div>
-<div class="line">38. Texas Giants 12.5</div>
-<div class="line">40. Putin's Dog 12.25</div>
-<div class="line">40. <strong>Red Five 12.25</strong></div>
-<div class="line">42. #NeverBama1 12.0</div>
-<div class="line">42. Amy Senders 12.0</div>
-<div class="line">42. Godiva 12.0</div>
-<div class="line">42. Katyusa 12.0</div>
-<div class="line">46. SantaCruzBill 11.25</div>
-<div class="line">47. Troll Factory Inc 11.0</div>
-<div class="line">47. Tyrone Swoopes 11.0</div>
-<div class="line">49. CUTIE PIE 10.5</div>
-<div class="line">49. T-Bone 10.5</div>
-<div class="line">49. West Coast Bias 10.5</div>
-<div class="line">52. Invanka Trump 9.0</div>
-<div class="line">53. Best Logo Wins 8.5</div>
-<div class="line">54. Spiker 8.25</div>
-<div class="line">55. Trollmaster 8.0</div>
-<div class="line">56. LaDolceVida 5.25</div>
-<div class="line">57. Spem in perpetuum 5.0</div>
-<div class="line">58. Cowboy 4.0</div>
+<div class="line">1. <strong>The force is strong with this one 23.0</strong></div>
+<div class="line">1. Zena 23.0</div>
+<div class="line">3. <strong>D-bo 22.25</strong></div>
+<div class="line">4. <strong>Do. Or do not. 22.0</strong></div>
+<div class="line">5. Gussysue 21.25</div>
+<div class="line">6. Backroom Deals 21.0</div>
+<div class="line">6. Cjepson 21.0</div>
+<div class="line">8. <strong>Bumblerooski 20.5</strong></div>
+<div class="line">8. <strong>EM43 20.5</strong></div>
+<div class="line">10. Blindhog 2017 20.0</div>
+<div class="line">10. <strong>Eclipse 20.0</strong></div>
+<div class="line">12. Jake and the Neverland Pirates 19.5</div>
+<div class="line">13. <strong>#MamaBear 19.25</strong></div>
+<div class="line">13. OSUX3 Fan 19.25</div>
+<div class="line">15. Blind Dog's Bluff 19.0</div>
+<div class="line">16. Gkid7 18.75</div>
+<div class="line">17. ConflictofInterest 18.5</div>
+<div class="line">17. O'Pooh 18.5</div>
+<div class="line">19. <strong>GlamKam 18.25</strong></div>
+<div class="line">20. Maine Chic 18.0</div>
+<div class="line">20. Team Ellie Mae 18.0</div>
+<div class="line">22. Krazy Koochies 17.75</div>
+<div class="line">23. Aaron's Team 17.5</div>
+<div class="line">23. <strong>You are my only hope 17.5</strong></div>
+<div class="line">25. GoForBones 17.25</div>
+<div class="line">26. Amy Senders 17.0</div>
+<div class="line">26. Corgidawg 17.0</div>
+<div class="line">26. EVA 17.0</div>
+<div class="line">29. Biscuit's Ball 16.25</div>
+<div class="line">29. LUCKY IN 2017 16.25</div>
+<div class="line">29. Putin's Dog 16.25</div>
+<div class="line">29. <strong>Red Five 16.25</strong></div>
+<div class="line">29. The Dude 16.25</div>
+<div class="line">34. #NeverBama1 16.0</div>
+<div class="line">34. ADTESQ 16.0</div>
+<div class="line">34. Fake News 16.0</div>
+<div class="line">34. Thetis 16.0</div>
+<div class="line">38. After Further Review 15.5</div>
+<div class="line">38. Doc 15.5</div>
+<div class="line">38. Texas Giants 15.5</div>
+<div class="line">41. SantaCruzBill 15.25</div>
+<div class="line">41. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 15.25</div>
+<div class="line">43. 12th Man 15.0</div>
+<div class="line">43. Dirk Diggler 15.0</div>
+<div class="line">43. Godiva 15.0</div>
+<div class="line">43. Katyusa 15.0</div>
+<div class="line">47. Tyrone Swoopes 14.0</div>
+<div class="line">48. Best Logo Wins 13.5</div>
+<div class="line">48. T-Bone 13.5</div>
+<div class="line">50. Troll Factory Inc 13.0</div>
+<div class="line">51. West Coast Bias 12.5</div>
+<div class="line">52. Spiker 12.25</div>
+<div class="line">53. CUTIE PIE 11.5</div>
+<div class="line">54. Invanka Trump 11.0</div>
+<div class="line">54. Trollmaster 11.0</div>
+<div class="line">56. Spem in perpetuum 9.0</div>
+<div class="line">57. LaDolceVida 7.25</div>
+<div class="line">58. Cowboy 6.0</div>
 </div>
 </div>
 </body>
