Updated bowl results.

--- a/bowl_pool/2016-2017/rankings.html
+++ b/bowl_pool/2016-2017/rankings.html
@@ -342,68 +342,68 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-12-31 09:29:21</em></div>
-<div class="line"><em>Last bowl scored:  ORANGE BOWL   (Michigan vs. Florida State)</em></div>
+<div class="line"><em>Last updated:  2017-01-01 12:07:16</em></div>
+<div class="line"><em>Last bowl scored:  FIESTA BOWL (Ohio State vs. Clemson)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>The force is strong with this one 23.0</strong></div>
-<div class="line">1. Zena 23.0</div>
-<div class="line">3. <strong>D-bo 22.25</strong></div>
-<div class="line">4. <strong>Do. Or do not. 22.0</strong></div>
-<div class="line">5. Gussysue 21.25</div>
-<div class="line">6. Backroom Deals 21.0</div>
-<div class="line">6. Cjepson 21.0</div>
-<div class="line">8. <strong>Bumblerooski 20.5</strong></div>
-<div class="line">8. <strong>EM43 20.5</strong></div>
-<div class="line">10. Blindhog 2017 20.0</div>
-<div class="line">10. <strong>Eclipse 20.0</strong></div>
-<div class="line">12. Jake and the Neverland Pirates 19.5</div>
-<div class="line">13. <strong>#MamaBear 19.25</strong></div>
-<div class="line">13. OSUX3 Fan 19.25</div>
-<div class="line">15. Blind Dog's Bluff 19.0</div>
-<div class="line">16. Gkid7 18.75</div>
-<div class="line">17. ConflictofInterest 18.5</div>
-<div class="line">17. O'Pooh 18.5</div>
-<div class="line">19. <strong>GlamKam 18.25</strong></div>
-<div class="line">20. Maine Chic 18.0</div>
-<div class="line">20. Team Ellie Mae 18.0</div>
-<div class="line">22. Krazy Koochies 17.75</div>
-<div class="line">23. Aaron's Team 17.5</div>
-<div class="line">23. <strong>You are my only hope 17.5</strong></div>
-<div class="line">25. GoForBones 17.25</div>
-<div class="line">26. Amy Senders 17.0</div>
-<div class="line">26. Corgidawg 17.0</div>
-<div class="line">26. EVA 17.0</div>
-<div class="line">29. Biscuit's Ball 16.25</div>
-<div class="line">29. LUCKY IN 2017 16.25</div>
-<div class="line">29. Putin's Dog 16.25</div>
-<div class="line">29. <strong>Red Five 16.25</strong></div>
-<div class="line">29. The Dude 16.25</div>
-<div class="line">34. #NeverBama1 16.0</div>
-<div class="line">34. ADTESQ 16.0</div>
-<div class="line">34. Fake News 16.0</div>
-<div class="line">34. Thetis 16.0</div>
-<div class="line">38. After Further Review 15.5</div>
-<div class="line">38. Doc 15.5</div>
-<div class="line">38. Texas Giants 15.5</div>
-<div class="line">41. SantaCruzBill 15.25</div>
-<div class="line">41. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 15.25</div>
-<div class="line">43. 12th Man 15.0</div>
-<div class="line">43. Dirk Diggler 15.0</div>
-<div class="line">43. Godiva 15.0</div>
-<div class="line">43. Katyusa 15.0</div>
-<div class="line">47. Tyrone Swoopes 14.0</div>
-<div class="line">48. Best Logo Wins 13.5</div>
-<div class="line">48. T-Bone 13.5</div>
-<div class="line">50. Troll Factory Inc 13.0</div>
-<div class="line">51. West Coast Bias 12.5</div>
-<div class="line">52. Spiker 12.25</div>
-<div class="line">53. CUTIE PIE 11.5</div>
-<div class="line">54. Invanka Trump 11.0</div>
-<div class="line">54. Trollmaster 11.0</div>
-<div class="line">56. Spem in perpetuum 9.0</div>
-<div class="line">57. LaDolceVida 7.25</div>
-<div class="line">58. Cowboy 6.0</div>
+<div class="line">1. Zena 31.5</div>
+<div class="line">2. Gussysue 29.75</div>
+<div class="line">3. <strong>Eclipse 28.5</strong></div>
+<div class="line">4. <strong>The force is strong with this one 28.0</strong></div>
+<div class="line">5. Cjepson 27.0</div>
+<div class="line">5. <strong>Do. Or do not. 27.0</strong></div>
+<div class="line">7. Blind Dog's Bluff 26.5</div>
+<div class="line">8. Gkid7 26.25</div>
+<div class="line">9. Jake and the Neverland Pirates 25.5</div>
+<div class="line">9. Maine Chic 25.5</div>
+<div class="line">11. Blindhog 2017 25.0</div>
+<div class="line">11. ConflictofInterest 25.0</div>
+<div class="line">13. <strong>GlamKam 24.75</strong></div>
+<div class="line">13. <strong>Red Five 24.75</strong></div>
+<div class="line">15. <strong>D-bo 24.25</strong></div>
+<div class="line">15. Krazy Koochies 24.25</div>
+<div class="line">15. OSUX3 Fan 24.25</div>
+<div class="line">18. Backroom Deals 23.5</div>
+<div class="line">18. <strong>EM43 23.5</strong></div>
+<div class="line">18. Thetis 23.5</div>
+<div class="line">21. EVA 23.0</div>
+<div class="line">21. O'Pooh 23.0</div>
+<div class="line">21. Texas Giants 23.0</div>
+<div class="line">24. GoForBones 22.75</div>
+<div class="line">24. Putin's Dog 22.75</div>
+<div class="line">24. The Dude 22.75</div>
+<div class="line">27. Aaron's Team 22.5</div>
+<div class="line">27. <strong>Bumblerooski 22.5</strong></div>
+<div class="line">27. Fake News 22.5</div>
+<div class="line">27. Katyusa 22.5</div>
+<div class="line">27. <strong>You are my only hope 22.5</strong></div>
+<div class="line">32. <strong>#MamaBear 22.25</strong></div>
+<div class="line">33. ADTESQ 22.0</div>
+<div class="line">33. Amy Senders 22.0</div>
+<div class="line">33. Corgidawg 22.0</div>
+<div class="line">33. Team Ellie Mae 22.0</div>
+<div class="line">37. SantaCruzBill 21.75</div>
+<div class="line">38. After Further Review 21.5</div>
+<div class="line">38. Dirk Diggler 21.5</div>
+<div class="line">40. Biscuit's Ball 21.25</div>
+<div class="line">41. CUTIE PIE 21.0</div>
+<div class="line">41. Godiva 21.0</div>
+<div class="line">43. 12th Man 20.0</div>
+<div class="line">44. Spiker 19.75</div>
+<div class="line">45. Doc 19.5</div>
+<div class="line">46. Tyrone Swoopes 19.0</div>
+<div class="line">46. West Coast Bias 19.0</div>
+<div class="line">48. Best Logo Wins 18.0</div>
+<div class="line">48. T-Bone 18.0</div>
+<div class="line">50. LUCKY IN 2017 17.25</div>
+<div class="line">51. #NeverBama1 17.0</div>
+<div class="line">51. Trollmaster 17.0</div>
+<div class="line">53. THE BEAVERS WON THE CIVIL WAR AND THAT IS ALL THAT MATTERS 15.25</div>
+<div class="line">54. Invanka Trump 15.0</div>
+<div class="line">55. Troll Factory Inc 14.0</div>
+<div class="line">56. Spem in perpetuum 13.0</div>
+<div class="line">57. LaDolceVida 10.25</div>
+<div class="line">58. Cowboy 8.0</div>
 </div>
 </div>
 </body>
