--- a/bowl_pool/2016-2017/results.html
+++ b/bowl_pool/2016-2017/results.html
@@ -2202,69 +2202,453 @@ ul.auto-toc {
 <td>0.0</td>
 <td>3.0</td>
 </tr>
+<tr><td>28</td>
+<td>CITRUS BOWL</td>
+<td>LSU</td>
+<td>Louisville</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>29</td>
+<td>TAXSLAYER.COM GATOR</td>
+<td>Georgia Tech</td>
+<td>Kentucky</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>30</td>
+<td>PEACH BOWL</td>
+<td>Alabama</td>
+<td>Washington</td>
+<td>16.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+</tr>
+<tr><td>31</td>
+<td>FIESTA BOWL</td>
+<td>Ohio State</td>
+<td>Clemson</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>2.5</td>
+</tr>
+<tr><td>B2</td>
+<td>Washington more than 345 yards total offense?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>B3</td>
+<td>JT Barret more than 50 yards NET rushing?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>19.25</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>11.5</strong></td>
 <td><strong>22.25</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>20.5</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>17.25</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>18.0</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>11.0</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>27.0</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>8.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>27.0</strong></td>
 <td><strong>19.5</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>29.75</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>16.25</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>23.0</strong></td>
-<td><strong>16.0</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>21.75</strong></td>
 <td><strong>13.0</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>17.5</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>22.0</strong></td>
 <td><strong>23.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>31.5</strong></td>
 </tr>
 </tbody>
 </table>
